--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,9 +38,11 @@
   --color-accent: rgb(162 120 255);
   --color-accent-10: rgb(162 120 255 / 0.1);
   --color-accent-70: rgb(162 120 255 / 0.7);
+  --color-accent-border: #57428A;
   --color-text: rgb(234 234 234);
   --color-muted: rgb(139 144 149);
   --color-border: #171b1f;
+  --color-progress-bg: #06263F;
   --color-white: rgb(255 255 255);
   --color-accent-dark: #0C0C16;
 }
