--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,20 @@
   --color-progress-bg: #06263F;
   --color-white: rgb(255 255 255);
   --color-accent-dark: #0C0C16;
+  
+  /* Status colors */
+  --color-success: rgb(52 211 153);
+  --color-success-10: rgb(52 211 153 / 0.1);
+  --color-success-20: rgb(52 211 153 / 0.2);
+  --color-warning: rgb(250 204 21);
+  --color-warning-10: rgb(250 204 21 / 0.1);
+  --color-warning-20: rgb(250 204 21 / 0.2);
+  --color-error: rgb(239 68 68);
+  --color-error-10: rgb(239 68 68 / 0.1);
+  --color-error-20: rgb(239 68 68 / 0.2);
+  --color-info: rgb(34 197 94);
+  --color-info-10: rgb(34 197 94 / 0.1);
+  --color-info-20: rgb(34 197 94 / 0.2);
 }
 
 .light {
@@ -65,7 +79,20 @@
   --color-white: rgb(255 255 255);
   --color-accent-dark: #F3F0FF;
   --color-text-strong: rgb(255 255 255);
-
+  
+  /* Status colors */
+  --color-success: rgb(34 197 94);
+  --color-success-10: rgb(34 197 94 / 0.1);
+  --color-success-20: rgb(34 197 94 / 0.2);
+  --color-warning: rgb(234 179 8);
+  --color-warning-10: rgb(234 179 8 / 0.1);
+  --color-warning-20: rgb(234 179 8 / 0.2);
+  --color-error: rgb(220 38 38);
+  --color-error-10: rgb(220 38 38 / 0.1);
+  --color-error-20: rgb(220 38 38 / 0.2);
+  --color-info: rgb(34 197 94);
+  --color-info-10: rgb(34 197 94 / 0.1);
+  --color-info-20: rgb(34 197 94 / 0.2);
 }
 
 html {
